# libphonenumber-sys

./: Cargo.toml  README.md  build.rs
c_lib/source/: CMakeLists.txt
c_lib/source/include/: libphonenumber_sys_c.h  libphonenumber_sys_c_asyoutypeformatter.h  libphonenumber_sys_c_exports.h  libphonenumber_sys_c_global.h  libphonenumber_sys_c_lock.h  libphonenumber_sys_c_lock_posix.h  libphonenumber_sys_c_phonemetadata.h  libphonenumber_sys_c_phonenumber.h  libphonenumber_sys_c_phonenumbermatch.h  libphonenumber_sys_c_phonenumbermatcher.h  libphonenumber_sys_c_phonenumberutil.h  libphonenumber_sys_c_regexp_adapter.h  libphonenumber_sys_c_regexp_cache.h  libphonenumber_sys_c_scoped_ptr.h  libphonenumber_sys_c_shortnumberinfo.h  libphonenumber_sys_c_singleton_posix.h  libphonenumber_sys_c_thread_checker.h  libphonenumber_sys_c_unicodestring.h  libphonenumber_sys_c_unicodetext.h
c_lib/source/src/: libphonenumber_sys_c_asyoutypeformatter.cpp  libphonenumber_sys_c_lock.cpp  libphonenumber_sys_c_lock_posix.cpp  libphonenumber_sys_c_phonemetadata.cpp  libphonenumber_sys_c_phonenumber.cpp  libphonenumber_sys_c_phonenumbermatch.cpp  libphonenumber_sys_c_phonenumbermatcher.cpp  libphonenumber_sys_c_phonenumberutil.cpp  libphonenumber_sys_c_regexp_adapter.cpp  libphonenumber_sys_c_regexp_cache.cpp  libphonenumber_sys_c_scoped_ptr.cpp  libphonenumber_sys_c_shortnumberinfo.cpp  libphonenumber_sys_c_singleton_posix.cpp  libphonenumber_sys_c_thread_checker.cpp  libphonenumber_sys_c_unicodestring.cpp  libphonenumber_sys_c_unicodetext.cpp
src/: allocator.rs  arena.rs  arenastring.rs  (+71 more)
