[dependencies]
cpp_utils = "0.1"
libc = "0.2"

[package]
authors = ["Yann Leretaille <yleretaille@gmail.com>"]
build = "build.rs"
name = "libphonenumber-sys"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/yannleretaille/libphonenumber-sys"
description = "rust ffi bindings to libphonenumber"
